fix: add fixed width and lazy loading to images to ease cumulative layout shift

--- a/src/styles.css
+++ b/src/styles.css
@@ -38,7 +38,9 @@ header p {
 }
 
 .game img {
-  max-width: 75px;
+  max-width: 100%;
+  height: auto;
+  display: block;
 }
 
 .word-bird-icon {
